# django_tgauth

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
src_back/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
src_back/api/: urls.py
src_back/api/private/: urls.py
src_back/api/private/v1/: urls.py
src_back/api/private/v1/tg_registration/: serializer.py  view.py
src_back/api/v1/: urls.py
src_back/api/v1/check_login/: serializer.py  view.py
src_back/api/v1/login/: view.py
src_back/migrations/: 0001_initial.py  0002_user.py
src_back/models/: __init__.py  login_token.py  user.py
src_back/pages/: login.py  main_.py
src_back/templates/: login.html  main_.html
src_bot/: main.py
src_bot/bot/: app.py
src_bot/bot/routers/: add_routers.py
src_bot/bot/routers/commands/: start.py
